# sdam-introduction-course-public

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/inventory/: EXPERIMENTS.md  run_all.py
experiments/inventory/constant/: EIC_000_template.ipynb  EIC_010_OrderUpToPolicy_as_baseline.ipynb  EIC_020_DynamicProgrammingPolicy_vs_baseline.ipynb  EIC_030_OrderUpToBlackboxPFA_vs_baseline.ipynb  EIC_040_OrderMilpCfaPolicy_vs_baseline.ipynb  EIC_042_OrderMilpCfaPolicy_vs_baseline copy.ipynb  EIC_050_PostDecisionGreedyVfaPolicy_vs_baseline.ipynb  EIC_051_FqiGreedyVfaPolicy_vs_baseline.ipynb  EIC_052c_VfaPolicy_vs_baseline.ipynb  EIC_060_DlaMpcMilpPolicy_vs_baseline.ipynb  EIC_061_DlaMctsUctPolicy_vs_baseline.ipynb  (+9 more)
experiments/queueing/: EXPERIMENTS.md  _smoke_eval_crn_manufacturing.py  qc_000_mm1_strict_crn.ipynb  run_all.py  scenario_01_mm1.py  scenario_02_parallel.py  scenario_03_dispatch_within_node.py  scenario_04_rework_loop.py  scenario_05_fast_vs_clean_rework.py  scenario_06_final_ppo_ready_manufacturing.py
lectures/: 00_setup.ipynb  01_repo_conventions.ipynb  lecture_000_template.ipynb
lectures/examples/: 02_bernoulli_coin_flip_toy.ipynb  02_core_probability_distributions_visualization.ipynb  02_markov_chain_weather_toy.ipynb  03_dynamic_programming_toy.ipynb  04_fd_spsa_toy.ipynb
src/helpers/: bootstrap.py  mermaid_helper.py
src/inventory/: CANONICAL_NOTEBOOKS.md  __init__.py
src/inventory/core/: __init__.py  (+5 more)
src/queueing/: config_compile.py  core_types.py  crn.py  dispatch.py  eval_crn.py  objectives.py  ppo_env.py  processes.py  qc_000_mm1_strict_crn.ipynb  rl_env.py  routing_policies.py  routing_rules.py  sim.py
src/scenarios/: SCENARIOS.md  __init__.py  _fast_mode.py  _smoke_eval_crn_manufacturing.py  run_all.py  scenario_01_mm1.py  scenario_02_parallel.py  scenario_03_dispatch_within_node.py  scenario_04_rework_loop.py  scenario_05_fast_vs_clean_rework.py  scenario_06_final_ppo_ready_manufacturing.py
tests/: conftest.py  test_crn_run_runtime_summary.py  test_imports.py  test_inventory_crn_determinism.py  test_inventory_forecaster_contracts.py  test_inventory_last_demand_contract.py  test_inventory_policy_contracts.py  test_notebook_hygiene.py  test_policy_automl_smac_import.py  test_queueing_crn_determinism.py  test_runner_smoke.py
(+108 files in other folders)
